# IoT2Phone

./: .gitignore  CMakeLists.txt  README.md  connection.cpp  connection.h  main.cpp  object.cpp  object.h  objectdevice.cpp  objectdevice.h  objectsecurity.cpp  objectsecurity.h  objectserver.cpp  objectserver.h
include/wakaama/examples/shared/: shared.cmake
